# telegram_chats

./: .env.example  .env.example.py  .gitignore  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
src/: database.py  main.py  middleware.py
src/api/: auth.py  category.py  chat.py  chat_category.py  dependencies.py
src/api/dependencies/: __init__.py  auth.py  uow.py
src/client/: main.py
src/enums/: __init__.py  utils.py
src/models/: __init__.py  category.py  chat.py  chat_category.py  user.py
src/repositories/: __init__.py  category.py  chat.py  chat_category.py  user.py
src/schemas/: __init__.py  auth.py  base.py  category.py  chat.py  chat_category.py  user.py
src/schemas/full/: __init__.py  category.py  chat.py
src/services/: __init__.py  auth.py  category.py  chat.py  chat_category.py  user.py
src/services/filters/: __init__.py  base.py  category.py  chat.py  chat_category.py  user.py
src/utils/: api_response.py  asyncio_utils.py  exception_detail.py  filters.py  query.py  repository.py  unitofwork.py
